Fixing uneven spacing

--- a/app/components/about.module.css
+++ b/app/components/about.module.css
@@ -1,9 +1,9 @@
 .about {
     display: grid;
     grid-template-columns: repeat(1fr);
-    gap: var(--spacer-md);
     padding-top: var(--spacer-lg);
-    padding-bottom: var(--spacer-xlg);
+    padding-bottom: var(--spacer-lg);
+    gap: var(--spacer-sm);
   }
   
   .aboutCol {
@@ -15,10 +15,7 @@
   
   
   @media screen and (min-width: 800px) {
-  
-    .about {
-      gap: var(--spacer-lg);
-    }
+
   }
   
   @media screen and (min-width: 1200px) {
